--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@angular/material": "^20.2.14",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "@ngx-formly/core": "^7.0.1",
+    "@ngx-formly/material": "^7.0.1",
     "@ngxs/devtools-plugin": "^20.1.0",
     "@ngxs/store": "^20.1.0",
     "rxjs": "~7.8.0",
