--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "@angular/material": "^20.2.14",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "@ckeditor/ckeditor5-angular": "^11.0.0",
+    "@ckeditor/ckeditor5-build-classic": "^44.3.0",
     "@ngx-formly/core": "^7.0.1",
     "@ngx-formly/material": "^7.0.1",
     "@ngxs/devtools-plugin": "^20.1.0",
     "@ngxs/store": "^20.1.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zone.js": "^0.15.1"
   },
   "devDependencies": {
     "@angular/build": "^20.3.15",
